[gd_scene load_steps=5 format=3 uid="uid://c68kkw8j2ncco"]

[ext_resource type="Script" path="res://Options_Menu.gd" id="1_joneh"]
[ext_resource type="FontFile" uid="uid://d4gloc7rb6s5s" path="res://Assets/Font/vinque rg.otf" id="2_ru6ls"]
[ext_resource type="AudioStream" uid="uid://dpmica7dit60i" path="res://Assets/Sounds/Audacity/blacksmith2.mp3" id="3_ormfo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hve4o"]

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_joneh")

[node name="MuteMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 78.0
offset_right = 677.0
offset_bottom = 133.0
scale = Vector2(1.5, 1.5)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="MuteCheck" type="CheckButton" parent="MuteMarginContainer"]
layout_mode = 2
text = "Mute Music"

[node name="Options_Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 5.0
offset_right = 569.0
offset_bottom = 37.0
scale = Vector2(3, 3)
theme_override_fonts/normal_font = ExtResource("2_ru6ls")
text = "Options"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 550.0
offset_right = 607.0
offset_bottom = 588.0
scale = Vector2(2, 2)

[node name="BackToMenuButton" type="Button" parent="MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ru6ls")
text = "Back to Main Menu"

[node name="ThwakToMainMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ormfo")

[node name="Hammer" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hve4o")

[connection signal="toggled" from="MuteMarginContainer/MuteCheck" to="." method="_on_mute_check_toggled"]
[connection signal="pressed" from="MarginContainer2/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
